# clinfo

./: CMakeLists.txt  GNUARM_all.sh  NDK_all.sh  build_NDK_cmake.sh  build_arm_gnueabi_cmake.sh  build_x86_cmake.sh
